changed model, some songs, updated visualizer and training to use 8 bit

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,5 @@
-Add small GAN-making network to generator
-Make discriminator actual discriminator
+Train ML only without noise for longer to see if it works
+
+Train ML only with noise then GAN
+
+Change where noise is input
